--- a/news/news.css
+++ b/news/news.css
@@ -1,4 +1,56 @@
-#menu{
+#backToTop {
+  display: none; /* Ẩn khi chưa cuộn */
+  position: fixed;
+  bottom: 30px;
+  right: 30px;
+  z-index: 100;
+  background-color: orange;
+  color: white;
+  border: none;  padding-left: 30px;
+  padding-right: 30px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  border-radius: 100%;
+  font-size: 50px;
+  cursor: pointer;
+  transition: box-shadow 0.25s linear !important;
+  font-weight: bolder;
+}
+#backToTop:hover {
+  box-shadow: 0 0 10px rgba(255, 0, 0, 0.8), 0 0 20px rgba(255, 0, 0, 0.9),
+    0 0 30px rgb(255, 0, 0) !important;
+}
+.article {
+  background-color: rgb(255, 201, 100);
+  border: 3px solid rgb(255, 75, 75);
+  border-radius: 10px;
+  padding: 10px;
+  margin: 10px;
+  transition: box-shadow 0.25s linear;
+}
+.article:hover {
+  box-shadow: 0 0 5px rgba(255, 0, 0, 20), 0 0 10px rgba(255, 0, 0, 20),
+    0 0 15px rgba(255, 0, 0, 20);
+}
+h2 {
+  font-weight: bolder !important;
+  color: rgb(250, 3, 3) !important;
+}
+p {
+  font-weight: bold;
+  color: black;
+}
+a {
+  font-weight: bold;
+  color: red !important;
+  transition: text-shadow 0.25s linear, color 0.25s linear !important;
+}
+a:hover {
+  color: rgb(0, 0, 255) !important;
+  text-shadow: 0 0 10px rgba(0, 0, 255, 0.2) 0 0 20px rgba(0, 0, 255, 0.2),
+    0 0 30px rgba(0, 0, 255, 0.2) !important;
+}
+#news {
   display: block;
   margin-top: 100px;
   margin-left: 120px;
@@ -38,11 +90,11 @@
     0 0 30px rgba(255, 0, 0, 20);
 }
 #treet:hover {
-  text-shadow: 0 0 10px rgba(255, 165, 0, 1), 0 0 20px rgba(255, 0165, 0, 1),
+  text-shadow: 0 0 10px rgba(255, 165, 0, 1), 0 0 20px rgba(255, 165, 0, 1),
     0 0 30px rgba(255, 165, 0, 1);
 }
 #east:hover {
-  text-shadow: 0 0 10px rgba(255, 165, 0, 1), 0 0 20px rgba(255, 0165, 0, 1),
+  text-shadow: 0 0 10px rgba(255, 165, 0, 1), 0 0 20px rgba(255, 165, 0, 1),
     0 0 30px rgba(255, 165, 0, 1);
 }
 .logo p {
@@ -95,7 +147,7 @@
   color: orange;
   display: inline;
   text-shadow: 0 0 10px rgba(255, 165, 0, 0.75),
-    0 0 20px rgba(255, 0165, 0, 0.5), 0 0 30px rgba(255, 165, 0, 0.25);
+    0 0 20px rgba(255, 165, 0, 0.5), 0 0 30px rgba(255, 165, 0, 0.25);
   font-family: "Segoe Script", "Gill Sans", "Gill Sans MT", Calibri,
     "Trebuchet MS", sans-serif;
 }
@@ -109,7 +161,7 @@
   font-family: "Segoe Script", "Gill Sans", "Gill Sans MT", Calibri,
     "Trebuchet MS", sans-serif;
   text-shadow: 0 0 10px rgba(255, 165, 0, 0.75),
-    0 0 20px rgba(255, 0165, 0, 0.5), 0 0 30px rgba(255, 165, 0, 0.25);
+    0 0 20px rgba(255, 165, 0, 0.5), 0 0 30px rgba(255, 165, 0, 0.25);
 }
 .contract {
   display: inline;
@@ -156,7 +208,8 @@
 }
 .dropdown-menu .dropdown-item {
   color: rgb(0, 0, 0) !important;
-  transition: text-shadow 0.25s linear, background-color 0.25s linear, font-weight 0.25s linear;
+  transition: text-shadow 0.25s linear, background-color 0.25s linear,
+    font-weight 0.25s linear;
 }
 .dropdown-menu .dropdown-item:hover {
   background-color: rgb(250, 250, 250);
@@ -174,8 +227,7 @@
   text-align: left;
   display: flex;
   flex-direction: row;
- justify-content: space-evenly;
-
+  justify-content: space-evenly;
 }
 .aboutus {
   font-size: 25px;
