--- a/setting/about/about.css
+++ b/setting/about/about.css
@@ -1,13 +1,26 @@
-#menu{
+#title {
+  font-size: 40px;
+  font-weight: bolder;
+}
+#about {
+  color: rgb(255, 255, 255);
+  text-align: center;
+  margin-left: 100px;
+  margin-right: 60px;
+  padding-top: 110px;
+  font-weight: bold;
+  background-color: rgba(0, 0, 0, 0.5);
+  font-size: 20px;
+}
+p {
+  line-height: 1.4; /* nhỏ khoảng cách (mặc định thường là 1.4) */
+}
+#shop {
   display: block;
   margin-top: 100px;
   margin-left: 120px;
   font-weight: bolder;
-}
-.foot-img {
-  margin-top: 800px;
-  margin-left: 0px;
-  margin-right: 0px;
+  font-size: 34px;
 }
 .fa-solid {
   transition: color 0.25s linear;
@@ -51,6 +64,18 @@
   /* display: inline; */
   font-weight: bolder;
   transition: text-shadow 0.25s linear;
+}
+body {
+  margin: 0; /* bỏ viền mặc định của body */
+  padding: 0;
+
+  background-attachment: fixed; /* 💥 đây là chìa khóa */
+  background-image: url("https://vanhoadoisong.vn/wp-content/uploads/2022/05/Background-hinh-nen-do-an-am-thuc-full-hd-800x450-1.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 100% 100%; /* kéo giãn ngang dọc cho khớp màn hình */
+  width: 100vh;
+  height: 100vh;
 }
 .navbar.bg-body-tertiary {
   background-color: rgba(0, 0, 0, 0.75) !important;
@@ -111,23 +136,13 @@
   text-shadow: 0 0 10px rgba(255, 165, 0, 0.75),
     0 0 20px rgba(255, 0165, 0, 0.5), 0 0 30px rgba(255, 165, 0, 0.25);
 }
-.contract {
-  display: inline;
-}
-#foot {
-  padding: 5px;
-  font-size: 20px;
-  text-align: center;
-  color: white;
-  background-color: rgb(0, 0, 0);
-}
 .navbar.navbar-expand-lg.bg-body-tertiary {
+  position: fixed !important;
+
   height: 14%;
   background-color: rgba(0, 0, 0, 0.5);
-  position: fixed !important;
   top: 0px;
   width: 100%;
-  z-index: 1000; /* (thường cần nếu muốn đè lên các phần tử khác) */
 }
 .navbar-nav {
   margin-left: auto;
@@ -156,7 +171,8 @@
 }
 .dropdown-menu .dropdown-item {
   color: rgb(0, 0, 0) !important;
-  transition: text-shadow 0.25s linear, background-color 0.25s linear, font-weight 0.25s linear;
+  transition: text-shadow 0.25s linear, background-color 0.25s linear,
+    font-weight 0.25s linear;
 }
 .dropdown-menu .dropdown-item:hover {
   background-color: rgb(250, 250, 250);
@@ -170,39 +186,7 @@
 .dropdown-divider {
   border-color: rgb(255, 255, 255);
 }
-.container-grid {
-  text-align: left;
-  display: flex;
-  flex-direction: row;
- justify-content: space-evenly;
-
-}
-.aboutus {
-  font-size: 25px;
-  margin-top: 300px;
-}
-.aboutus p {
-  margin-bottom: 0px;
-}
-.followus {
-  font-size: 25px;
-  margin-top: 300px;
-}
-.followus p {
-  margin-bottom: 0px;
-}
-.fa-brands.fa-square-facebook.fa-2x:hover {
-  font-size: 90px;
-}
-.fa-brands.fa-facebook-messenger.fa-2x:hover {
-  font-size: 90px;
-}
-.fa-brands.fa-youtube.fa-2x:hover {
-  font-size: 90px;
-}
-.fa-brands.fa-tiktok.fa-2x:hover {
-  font-size: 90px;
-}
 .fa-brands {
-  transition: font-size 0.25s ease-in-out;
+  background-color: white;
+  border: 1px solid white;
 }
