--- a/shopping/shop.css
+++ b/shopping/shop.css
@@ -1,8 +1,9 @@
-#menu{
+#shop{
   display: block;
   margin-top: 100px;
   margin-left: 120px;
   font-weight: bolder;
+  font-size: 34px;
 }
 .foot-img {
   margin-top: 800px;
