--- a/setting/about/about.css
+++ b/setting/about/about.css
@@ -2,6 +2,33 @@
   font-size: 40px;
   font-weight: bolder;
 }
+
+#backToTop {
+  display: none;
+  /* Ẩn khi chưa cuộn */
+  position: fixed;
+  bottom: 30px;
+  right: 30px;
+  z-index: 100;
+  background-color: orange;
+  color: white;
+  border: none;
+  padding-left: 30px;
+  padding-right: 30px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  border-radius: 100%;
+  font-size: 50px;
+  cursor: pointer;
+  transition: box-shadow 0.25s linear !important;
+  font-weight: bolder;
+}
+
+#backToTop:hover {
+  box-shadow: 0 0 10px rgba(255, 0, 0, 0.8), 0 0 20px rgba(255, 0, 0, 0.9),
+    0 0 30px rgb(255, 0, 0) !important;
+}
+
 #about {
   color: rgb(255, 255, 255);
   text-align: center;
@@ -12,9 +39,12 @@
   background-color: rgba(0, 0, 0, 0.5);
   font-size: 20px;
 }
+
 p {
-  line-height: 1.4; /* nhỏ khoảng cách (mặc định thường là 1.4) */
+  line-height: 1.4;
+  /* nhỏ khoảng cách (mặc định thường là 1.4) */
 }
+
 #shop {
   display: block;
   margin-top: 100px;
@@ -22,15 +52,19 @@ p {
   font-weight: bolder;
   font-size: 34px;
 }
+
 .fa-solid {
   transition: color 0.25s linear;
 }
+
 .fa-solid:hover {
   color: rgb(255, 0, 0);
 }
+
 .nav-link:hover {
   color: orange !important;
 }
+
 .logo {
   margin-left: 110px;
   text-decoration: none;
@@ -38,26 +72,32 @@ p {
   width: 50%;
   border: none;
 }
+
 #carry:hover {
   text-shadow: 0 0 10px rgba(255, 255, 255, 0.75),
     0 0 20px rgb(255, 255, 255, 0.5), 0 0 30px rgb(255, 255, 255, 0.25);
 }
+
 #S:hover {
   text-shadow: 0 0 10px rgba(255, 0, 0, 20), 0 0 20px rgba(255, 0, 0, 20),
     0 0 30px rgba(255, 0, 0, 20);
 }
+
 #F:hover {
   text-shadow: 0 0 10px rgba(255, 0, 0, 20), 0 0 20px rgba(255, 0, 0, 20),
     0 0 30px rgba(255, 0, 0, 20);
 }
+
 #treet:hover {
   text-shadow: 0 0 10px rgba(255, 165, 0, 1), 0 0 20px rgba(255, 0165, 0, 1),
     0 0 30px rgba(255, 165, 0, 1);
 }
+
 #east:hover {
   text-shadow: 0 0 10px rgba(255, 165, 0, 1), 0 0 20px rgba(255, 0165, 0, 1),
     0 0 30px rgba(255, 165, 0, 1);
 }
+
 .logo p {
   margin: 0;
   padding: 0;
@@ -65,22 +105,28 @@ p {
   font-weight: bolder;
   transition: text-shadow 0.25s linear;
 }
+
 body {
-  margin: 0; /* bỏ viền mặc định của body */
+  margin: 0;
+  /* bỏ viền mặc định của body */
   padding: 0;
 
-  background-attachment: fixed; /* 💥 đây là chìa khóa */
+  background-attachment: fixed;
+  /* 💥 đây là chìa khóa */
   background-image: url("https://vanhoadoisong.vn/wp-content/uploads/2022/05/Background-hinh-nen-do-an-am-thuc-full-hd-800x450-1.jpg");
   background-position: center;
   background-repeat: no-repeat;
-  background-size: 100% 100%; /* kéo giãn ngang dọc cho khớp màn hình */
+  background-size: 100% 100%;
+  /* kéo giãn ngang dọc cho khớp màn hình */
   width: 100vh;
   height: 100vh;
 }
+
 .navbar.bg-body-tertiary {
   background-color: rgba(0, 0, 0, 0.75) !important;
   color: white !important;
 }
+
 #carry {
   letter-spacing: -14px;
   text-align: center;
@@ -88,6 +134,7 @@ body {
   text-shadow: 0 0 10px rgba(12, 12, 12, 0.65), 0 0 20px rgba(0, 0, 0, 0.325),
     0 0 30px rgba(0, 0, 0, 0.1125);
 }
+
 #S {
   letter-spacing: -11px;
   margin: 0px;
@@ -100,6 +147,7 @@ body {
   text-shadow: 0 0 10px rgba(255, 0, 0, 0.75), 0 0 20px rgba(255, 0, 0, 0.65),
     0 0 30px rgba(255, 0, 0, 0.55);
 }
+
 #F {
   letter-spacing: -13px;
   margin: 0px;
@@ -112,6 +160,7 @@ body {
   text-shadow: 0 0 10px rgba(255, 0, 0, 0.75), 0 0 20px rgba(255, 0, 0, 0.65),
     0 0 30px rgba(255, 0, 0, 0.55);
 }
+
 #treet {
   letter-spacing: -1px;
   margin: 0px;
@@ -124,6 +173,7 @@ body {
   font-family: "Segoe Script", "Gill Sans", "Gill Sans MT", Calibri,
     "Trebuchet MS", sans-serif;
 }
+
 #east {
   letter-spacing: -1px;
   margin: 0px;
@@ -136,6 +186,7 @@ body {
   text-shadow: 0 0 10px rgba(255, 165, 0, 0.75),
     0 0 20px rgba(255, 0165, 0, 0.5), 0 0 30px rgba(255, 165, 0, 0.25);
 }
+
 .navbar.navbar-expand-lg.bg-body-tertiary {
   position: fixed !important;
 
@@ -144,15 +195,18 @@ body {
   top: 0px;
   width: 100%;
 }
+
 .navbar-nav {
   margin-left: auto;
 }
+
 .nav-link {
   margin-right: 50px;
   font-size: 25px;
   margin-top: 0%;
   color: white !important;
 }
+
 .btn-danger.dropdown-toggle {
   margin-right: 50px;
   background-color: rgba(0, 0, 0, 0);
@@ -160,32 +214,41 @@ body {
   border-radius: 100px;
   color: white;
 }
+
 .navbar {
   background-color: rgba(255, 255, 255, 0.5) !important;
 }
+
 .btn-group {
   color: white !important;
 }
+
 .dropdown-menu {
-  background-color: rgb(255, 255, 255) !important; /* nền tối */
+  background-color: rgb(255, 255, 255) !important;
+  /* nền tối */
 }
+
 .dropdown-menu .dropdown-item {
   color: rgb(0, 0, 0) !important;
   transition: text-shadow 0.25s linear, background-color 0.25s linear,
     font-weight 0.25s linear;
 }
+
 .dropdown-menu .dropdown-item:hover {
   background-color: rgb(250, 250, 250);
   font-weight: bold;
   text-shadow: 0 0 10px rgba(0, 0, 0, 0.75), 0 0 20px rgba(0, 0, 0, 0.5),
     0 0 30px rgba(255, 0, 0, 0.25);
 }
+
 * {
   font-family: Arial, Helvetica, sans-serif;
 }
+
 .dropdown-divider {
   border-color: rgb(255, 255, 255);
 }
+
 .fa-brands {
   background-color: white;
   border: 1px solid white;
