--- a/setting/theme/theme.css
+++ b/setting/theme/theme.css
@@ -1,12 +1,15 @@
 .fa-solid {
   transition: color 0.25s linear;
 }
+
 .fa-solid:hover {
   color: rgb(255, 0, 0);
 }
+
 .nav-link:hover {
   color: orange !important;
 }
+
 .logo {
   margin-left: 110px;
   text-decoration: none;
@@ -14,26 +17,32 @@
   width: 50%;
   border: none;
 }
+
 #carry:hover {
   text-shadow: 0 0 10px rgba(255, 255, 255, 0.75),
     0 0 20px rgb(255, 255, 255, 0.5), 0 0 30px rgb(255, 255, 255, 0.25);
 }
+
 #S:hover {
   text-shadow: 0 0 10px rgba(255, 0, 0, 20), 0 0 20px rgba(255, 0, 0, 20),
     0 0 30px rgba(255, 0, 0, 20);
 }
+
 #F:hover {
   text-shadow: 0 0 10px rgba(255, 0, 0, 20), 0 0 20px rgba(255, 0, 0, 20),
     0 0 30px rgba(255, 0, 0, 20);
 }
+
 #treet:hover {
   text-shadow: 0 0 10px rgba(255, 165, 0, 1), 0 0 20px rgba(255, 0165, 0, 1),
     0 0 30px rgba(255, 165, 0, 1);
 }
+
 #east:hover {
   text-shadow: 0 0 10px rgba(255, 165, 0, 1), 0 0 20px rgba(255, 0165, 0, 1),
     0 0 30px rgba(255, 165, 0, 1);
 }
+
 .logo p {
   margin: 0;
   padding: 0;
@@ -41,10 +50,12 @@
   font-weight: bolder;
   transition: text-shadow 0.25s linear;
 }
+
 .navbar.bg-body-tertiary {
   background-color: rgba(0, 0, 0, 0.75) !important;
   color: white !important;
 }
+
 #carry {
   letter-spacing: -14px;
   text-align: center;
@@ -52,6 +63,7 @@
   text-shadow: 0 0 10px rgba(12, 12, 12, 0.65), 0 0 20px rgba(0, 0, 0, 0.325),
     0 0 30px rgba(0, 0, 0, 0.1125);
 }
+
 #S {
   letter-spacing: -11px;
   margin: 0px;
@@ -64,6 +76,7 @@
   text-shadow: 0 0 10px rgba(255, 0, 0, 0.75), 0 0 20px rgba(255, 0, 0, 0.65),
     0 0 30px rgba(255, 0, 0, 0.55);
 }
+
 #F {
   letter-spacing: -13px;
   margin: 0px;
@@ -76,6 +89,7 @@
   text-shadow: 0 0 10px rgba(255, 0, 0, 0.75), 0 0 20px rgba(255, 0, 0, 0.65),
     0 0 30px rgba(255, 0, 0, 0.55);
 }
+
 #treet {
   letter-spacing: -1px;
   margin: 0px;
@@ -88,6 +102,7 @@
   font-family: "Segoe Script", "Gill Sans", "Gill Sans MT", Calibri,
     "Trebuchet MS", sans-serif;
 }
+
 #east {
   letter-spacing: -1px;
   margin: 0px;
@@ -100,23 +115,33 @@
   text-shadow: 0 0 10px rgba(255, 165, 0, 0.75),
     0 0 20px rgba(255, 0165, 0, 0.5), 0 0 30px rgba(255, 165, 0, 0.25);
 }
+
+body {
+  display: flex;
+  justify-content: space-evenly;
+}
+
 .navbar.navbar-expand-lg.bg-body-tertiary {
   height: 14%;
   background-color: rgba(0, 0, 0, 0.5);
   position: fixed !important;
   top: 0px;
   width: 100%;
-  z-index: 1000; /* (thường cần nếu muốn đè lên các phần tử khác) */
+  z-index: 1000;
+  /* (thường cần nếu muốn đè lên các phần tử khác) */
 }
+
 .navbar-nav {
   margin-left: auto;
 }
+
 .nav-link {
   margin-right: 50px;
   font-size: 25px;
   margin-top: 0%;
   color: white !important;
 }
+
 .btn-danger.dropdown-toggle {
   margin-right: 50px;
   background-color: rgba(0, 0, 0, 0);
@@ -124,28 +149,37 @@
   border-radius: 100px;
   color: white;
 }
+
 .navbar {
   background-color: rgba(255, 255, 255, 0.5) !important;
 }
+
 .btn-group {
   color: white !important;
 }
+
 .dropdown-menu {
-  background-color: rgb(255, 255, 255) !important; /* nền tối */
+  background-color: rgb(255, 255, 255) !important;
+  /* nền tối */
 }
+
 .dropdown-menu .dropdown-item {
   color: rgb(0, 0, 0) !important;
-  transition: text-shadow 0.25s linear, background-color 0.25s linear, font-weight 0.25s linear;
+  transition: text-shadow 0.25s linear, background-color 0.25s linear,
+    font-weight 0.25s linear;
 }
+
 .dropdown-menu .dropdown-item:hover {
   background-color: rgb(250, 250, 250);
   font-weight: bold;
   text-shadow: 0 0 10px rgba(0, 0, 0, 0.75), 0 0 20px rgba(0, 0, 0, 0.5),
     0 0 30px rgba(255, 0, 0, 0.25);
 }
+
 * {
   font-family: Arial, Helvetica, sans-serif;
 }
+
 .dropdown-divider {
   border-color: rgb(255, 255, 255);
 }
