--- a/information/inform.css
+++ b/information/inform.css
@@ -1,3 +1,29 @@
+#backToTop {
+  display: none;
+  /* Ẩn khi chưa cuộn */
+  position: fixed;
+  bottom: 30px;
+  right: 30px;
+  z-index: 100;
+  background-color: orange;
+  color: white;
+  border: none;
+  padding-left: 30px;
+  padding-right: 30px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  border-radius: 100%;
+  font-size: 50px;
+  cursor: pointer;
+  transition: box-shadow 0.25s linear !important;
+  font-weight: bolder;
+}
+
+#backToTop:hover {
+  box-shadow: 0 0 10px rgba(255, 0, 0, 0.8), 0 0 20px rgba(255, 0, 0, 0.9),
+    0 0 30px rgb(255, 0, 0) !important;
+}
+
 #container {
   margin: 10px 370px 0px 370px;
   display: flex;
