--- a/news/news.css
+++ b/news/news.css
@@ -1,12 +1,14 @@
 #backToTop {
-  display: none; /* Ẩn khi chưa cuộn */
+  display: none;
+  /* Ẩn khi chưa cuộn */
   position: fixed;
   bottom: 30px;
   right: 30px;
   z-index: 100;
   background-color: orange;
   color: white;
-  border: none;  padding-left: 30px;
+  border: none;
+  padding-left: 30px;
   padding-right: 30px;
   padding-top: 5px;
   padding-bottom: 5px;
@@ -16,10 +18,12 @@
   transition: box-shadow 0.25s linear !important;
   font-weight: bolder;
 }
+
 #backToTop:hover {
   box-shadow: 0 0 10px rgba(255, 0, 0, 0.8), 0 0 20px rgba(255, 0, 0, 0.9),
     0 0 30px rgb(255, 0, 0) !important;
 }
+
 .article {
   background-color: rgb(255, 201, 100);
   border: 3px solid rgb(255, 75, 75);
@@ -28,48 +32,59 @@
   margin: 10px;
   transition: box-shadow 0.25s linear;
 }
+
 .article:hover {
   box-shadow: 0 0 5px rgba(255, 0, 0, 20), 0 0 10px rgba(255, 0, 0, 20),
     0 0 15px rgba(255, 0, 0, 20);
 }
+
 h2 {
   font-weight: bolder !important;
   color: rgb(250, 3, 3) !important;
 }
+
 p {
   font-weight: bold;
   color: black;
 }
+
 a {
   font-weight: bold;
   color: red !important;
   transition: text-shadow 0.25s linear, color 0.25s linear !important;
 }
+
 a:hover {
   color: rgb(0, 0, 255) !important;
   text-shadow: 0 0 10px rgba(0, 0, 255, 0.2) 0 0 20px rgba(0, 0, 255, 0.2),
     0 0 30px rgba(0, 0, 255, 0.2) !important;
 }
+
 #news {
   display: block;
   margin-top: 100px;
   margin-left: 120px;
   font-weight: bolder;
 }
+
 .foot-img {
   margin-top: 800px;
   margin-left: 0px;
   margin-right: 0px;
 }
+
 .fa-solid {
   transition: color 0.25s linear;
 }
+
 .fa-solid:hover {
   color: rgb(255, 0, 0);
 }
+
 .nav-link:hover {
   color: orange !important;
 }
+
 .logo {
   margin-left: 110px;
   text-decoration: none;
@@ -77,26 +92,32 @@ a:hover {
   width: 50%;
   border: none;
 }
+
 #carry:hover {
   text-shadow: 0 0 10px rgba(255, 255, 255, 0.75),
     0 0 20px rgb(255, 255, 255, 0.5), 0 0 30px rgb(255, 255, 255, 0.25);
 }
+
 #S:hover {
   text-shadow: 0 0 10px rgba(255, 0, 0, 20), 0 0 20px rgba(255, 0, 0, 20),
     0 0 30px rgba(255, 0, 0, 20);
 }
+
 #F:hover {
   text-shadow: 0 0 10px rgba(255, 0, 0, 20), 0 0 20px rgba(255, 0, 0, 20),
     0 0 30px rgba(255, 0, 0, 20);
 }
+
 #treet:hover {
   text-shadow: 0 0 10px rgba(255, 165, 0, 1), 0 0 20px rgba(255, 165, 0, 1),
     0 0 30px rgba(255, 165, 0, 1);
 }
+
 #east:hover {
   text-shadow: 0 0 10px rgba(255, 165, 0, 1), 0 0 20px rgba(255, 165, 0, 1),
     0 0 30px rgba(255, 165, 0, 1);
 }
+
 .logo p {
   margin: 0;
   padding: 0;
@@ -104,10 +125,12 @@ a:hover {
   font-weight: bolder;
   transition: text-shadow 0.25s linear;
 }
+
 .navbar.bg-body-tertiary {
   background-color: rgba(0, 0, 0, 0.75) !important;
   color: white !important;
 }
+
 #carry {
   letter-spacing: -14px;
   text-align: center;
@@ -115,6 +138,7 @@ a:hover {
   text-shadow: 0 0 10px rgba(12, 12, 12, 0.65), 0 0 20px rgba(0, 0, 0, 0.325),
     0 0 30px rgba(0, 0, 0, 0.1125);
 }
+
 #S {
   letter-spacing: -11px;
   margin: 0px;
@@ -127,6 +151,7 @@ a:hover {
   text-shadow: 0 0 10px rgba(255, 0, 0, 0.75), 0 0 20px rgba(255, 0, 0, 0.65),
     0 0 30px rgba(255, 0, 0, 0.55);
 }
+
 #F {
   letter-spacing: -13px;
   margin: 0px;
@@ -139,6 +164,7 @@ a:hover {
   text-shadow: 0 0 10px rgba(255, 0, 0, 0.75), 0 0 20px rgba(255, 0, 0, 0.65),
     0 0 30px rgba(255, 0, 0, 0.55);
 }
+
 #treet {
   letter-spacing: -1px;
   margin: 0px;
@@ -146,11 +172,12 @@ a:hover {
   text-align: center;
   color: orange;
   display: inline;
-  text-shadow: 0 0 10px rgba(255, 165, 0, 0.75),
-    0 0 20px rgba(255, 165, 0, 0.5), 0 0 30px rgba(255, 165, 0, 0.25);
+  text-shadow: 0 0 10px rgba(255, 165, 0, 0.75), 0 0 20px rgba(255, 165, 0, 0.5),
+    0 0 30px rgba(255, 165, 0, 0.25);
   font-family: "Segoe Script", "Gill Sans", "Gill Sans MT", Calibri,
     "Trebuchet MS", sans-serif;
 }
+
 #east {
   letter-spacing: -1px;
   margin: 0px;
@@ -160,12 +187,14 @@ a:hover {
   display: inline;
   font-family: "Segoe Script", "Gill Sans", "Gill Sans MT", Calibri,
     "Trebuchet MS", sans-serif;
-  text-shadow: 0 0 10px rgba(255, 165, 0, 0.75),
-    0 0 20px rgba(255, 165, 0, 0.5), 0 0 30px rgba(255, 165, 0, 0.25);
+  text-shadow: 0 0 10px rgba(255, 165, 0, 0.75), 0 0 20px rgba(255, 165, 0, 0.5),
+    0 0 30px rgba(255, 165, 0, 0.25);
 }
+
 .contract {
   display: inline;
 }
+
 #foot {
   padding: 5px;
   font-size: 20px;
@@ -173,23 +202,28 @@ a:hover {
   color: white;
   background-color: rgb(0, 0, 0);
 }
+
 .navbar.navbar-expand-lg.bg-body-tertiary {
   height: 14%;
   background-color: rgba(0, 0, 0, 0.5);
   position: fixed !important;
   top: 0px;
   width: 100%;
-  z-index: 1000; /* (thường cần nếu muốn đè lên các phần tử khác) */
+  z-index: 1000;
+  /* (thường cần nếu muốn đè lên các phần tử khác) */
 }
+
 .navbar-nav {
   margin-left: auto;
 }
+
 .nav-link {
   margin-right: 50px;
   font-size: 25px;
   margin-top: 0%;
   color: white !important;
 }
+
 .btn-danger.dropdown-toggle {
   margin-right: 50px;
   background-color: rgba(0, 0, 0, 0);
@@ -197,64 +231,82 @@ a:hover {
   border-radius: 100px;
   color: white;
 }
+
 .navbar {
   background-color: rgba(255, 255, 255, 0.5) !important;
 }
+
 .btn-group {
   color: white !important;
 }
+
 .dropdown-menu {
-  background-color: rgb(255, 255, 255) !important; /* nền tối */
+  background-color: rgb(255, 255, 255) !important;
+  /* nền tối */
 }
+
 .dropdown-menu .dropdown-item {
   color: rgb(0, 0, 0) !important;
   transition: text-shadow 0.25s linear, background-color 0.25s linear,
     font-weight 0.25s linear;
 }
+
 .dropdown-menu .dropdown-item:hover {
   background-color: rgb(250, 250, 250);
   font-weight: bold;
   text-shadow: 0 0 10px rgba(0, 0, 0, 0.75), 0 0 20px rgba(0, 0, 0, 0.5),
     0 0 30px rgba(255, 0, 0, 0.25);
 }
+
 * {
   font-family: Arial, Helvetica, sans-serif;
 }
+
 .dropdown-divider {
   border-color: rgb(255, 255, 255);
 }
+
 .container-grid {
   text-align: left;
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
 }
+
 .aboutus {
   font-size: 25px;
   margin-top: 300px;
 }
+
 .aboutus p {
   margin-bottom: 0px;
 }
+
 .followus {
   font-size: 25px;
   margin-top: 300px;
 }
+
 .followus p {
   margin-bottom: 0px;
 }
+
 .fa-brands.fa-square-facebook.fa-2x:hover {
   font-size: 90px;
 }
+
 .fa-brands.fa-facebook-messenger.fa-2x:hover {
   font-size: 90px;
 }
+
 .fa-brands.fa-youtube.fa-2x:hover {
   font-size: 90px;
 }
+
 .fa-brands.fa-tiktok.fa-2x:hover {
   font-size: 90px;
 }
+
 .fa-brands {
   transition: font-size 0.25s ease-in-out;
 }
