--- a/setting/theme/theme.css
+++ b/setting/theme/theme.css
@@ -1,3 +1,42 @@
+#backToTop {
+  display: none;
+  /* Ẩn khi chưa cuộn */
+  position: fixed;
+  bottom: 30px;
+  right: 30px;
+  z-index: 100;
+  background-color: orange;
+  color: white;
+  border: none;
+  padding-left: 30px;
+  padding-right: 30px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  border-radius: 100%;
+  font-size: 50px;
+  cursor: pointer;
+  transition: box-shadow 0.25s linear !important;
+  font-weight: bolder;
+}
+
+#backToTop:hover {
+  box-shadow: 0 0 10px rgba(255, 0, 0, 0.8), 0 0 20px rgba(255, 0, 0, 0.9),
+    0 0 30px rgb(255, 0, 0) !important;
+}
+
+p {
+  line-height: 1.4;
+  /* nhỏ khoảng cách (mặc định thường là 1.4) */
+}
+
+#shop {
+  display: block;
+  margin-top: 100px;
+  margin-left: 120px;
+  font-weight: bolder;
+  font-size: 34px;
+}
+
 .fa-solid {
   transition: color 0.25s linear;
 }
@@ -14,8 +53,9 @@
   margin-left: 110px;
   text-decoration: none;
   font-size: 40px;
-  width: 50%;
+  width: 90%;
   border: none;
+  gap: 11px;
 }
 
 #carry:hover {
@@ -50,6 +90,8 @@
   font-weight: bolder;
   transition: text-shadow 0.25s linear;
 }
+
+
 
 .navbar.bg-body-tertiary {
   background-color: rgba(0, 0, 0, 0.75) !important;
@@ -116,19 +158,13 @@
     0 0 20px rgba(255, 0165, 0, 0.5), 0 0 30px rgba(255, 165, 0, 0.25);
 }
 
-body {
-  display: flex;
-  justify-content: space-evenly;
-}
-
 .navbar.navbar-expand-lg.bg-body-tertiary {
+  position: fixed !important;
+  z-index: 10000;
   height: 14%;
   background-color: rgba(0, 0, 0, 0.5);
-  position: fixed !important;
   top: 0px;
   width: 100%;
-  z-index: 1000;
-  /* (thường cần nếu muốn đè lên các phần tử khác) */
 }
 
 .navbar-nav {
@@ -182,4 +218,31 @@ body {
 
 .dropdown-divider {
   border-color: rgb(255, 255, 255);
+}
+
+.fa-brands {
+  background-color: white;
+  border: 1px solid white;
+}
+.container-grid {
+  text-align: left;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+}
+
+.aboutus {
+  font-size: 25px;
+  margin-top: 300px;
+  text-align: left;
+}
+
+.aboutus p {
+  margin-bottom: 0px;
+  font-weight: lighter;
+}
+
+.followus {
+  font-size: 25px;
+  margin-top: 300px;
 }
